Fixed spawning on Geito and LinkMikey. Started implementing Release 3 Features.

--- a/GameData/OuterParallax/MPE/_Scatters/Configs_C/LintMikey.cfg
+++ b/GameData/OuterParallax/MPE/_Scatters/Configs_C/LintMikey.cfg
@@ -48,10 +48,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 0
-				spawnChance = 0.5
+				seed = 0.870000005
+				spawnChance = 0.349999994
 				range = 150
-				populationMultiplier = 2
+				populationMultiplier = 1
 				minScale = 0.300000012,0.300000012,0.300000012
 				maxScale = 0.600000024,0.600000024,0.600000024
 				scaleRandomness = 0.5
@@ -59,7 +59,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 0.00100000005
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
-				maxNormalDeviance = 0.430000395
+				maxNormalDeviance = 0.430000782
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -130,8 +130,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 1
-				spawnChance = 0.300000012
+				seed = 1.64499998
+				spawnChance = 0.100000001
 				range = 150
 				populationMultiplier = 1
 				minScale = 0.300000012,0.300000012,0.300000012
@@ -141,7 +141,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 0.00100000005
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
-				maxNormalDeviance = 0.430000395
+				maxNormalDeviance = 0.355879843
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -212,18 +212,18 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 3
-				spawnChance = 0.100000001
+				seed = 7.51000023
+				spawnChance = 0.0500000007
 				range = 650
 				populationMultiplier = 1
 				minScale = 0.300000012,0.300000012,0.300000012
 				maxScale = 0.600000024,0.600000024,0.600000024
 				scaleRandomness = 0.5
 				cutoffScale = 0.0700000003
-				steepPower = 0.00100000005
+				steepPower = 0.100000001
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
-				maxNormalDeviance = 0.430000395
+				maxNormalDeviance = 0.355879843
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -294,8 +294,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 5
-				spawnChance = 0.100000001
+				seed = 11.5
+				spawnChance = 0.0500000007
 				range = 900
 				populationMultiplier = 1
 				minScale = 0.300000012,0.300000012,0.300000012
@@ -305,7 +305,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 0.00100000005
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
-				maxNormalDeviance = 0.430000395
+				maxNormalDeviance = 0.327331781
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -376,8 +376,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 7
-				spawnChance = 0.150000006
+				seed = 15
+				spawnChance = 0.0500000007
 				range = 2000
 				populationMultiplier = 1
 				minScale = 0.400000006,0.400000006,0.400000006
@@ -387,7 +387,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 0.00100000005
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
-				maxNormalDeviance = 0.430000782
+				maxNormalDeviance = 0.430001169
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -459,7 +459,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 8
-				spawnChance = 0.150000006
+				spawnChance = 0.0500000007
 				range = 2000
 				populationMultiplier = 1
 				minScale = 0.150000006,0.150000006,0.150000006
@@ -469,7 +469,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 0.00100000005
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
-				maxNormalDeviance = 0.430000782
+				maxNormalDeviance = 0.430001169
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -540,8 +540,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 10
-				spawnChance = 0.100000001
+				seed = 17.5499992
+				spawnChance = 0.0500000007
 				range = 2000
 				populationMultiplier = 1
 				minScale = 0.400000006,0.400000006,0.400000006
@@ -551,7 +551,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 0.00100000005
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
-				maxNormalDeviance = 0.430000395
+				maxNormalDeviance = 0.430000782
 				minAltitude = -10000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
