--- a/GameData/OuterParallax/OPM/_Configs/IncreaseSubdivisionCount_C.cfg
+++ b/GameData/OuterParallax/OPM/_Configs/IncreaseSubdivisionCount_C.cfg
@@ -2,6 +2,7 @@
 {
     @Body[Hale]
     {
+        %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
 			%Mods
@@ -17,6 +18,7 @@
     }
     @Body[Ovok]
     {
+        %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
 			%Mods
@@ -32,6 +34,7 @@
     }
     @Body[Slate]
     {
+        %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
 			%Mods
@@ -47,6 +50,7 @@
 	}
     @Body[Tekto]
     {
+        %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
 			%Mods
@@ -62,6 +66,7 @@
     }
     @Body[Tal]
     {
+        %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
 			%Mods
@@ -77,6 +82,7 @@
     }
     @Body[Wal]
     {
+        %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
 			%Mods
@@ -92,6 +98,7 @@
     }
     @Body[Priax]
     {
+        %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
 			%Mods
@@ -107,6 +114,7 @@
     }
     @Body[Polta]
     {
+        %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
 			%Mods
@@ -122,6 +130,7 @@
     }
     @Body[Thatmo]
     {
+        %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
 			%Mods
@@ -137,6 +146,7 @@
     }
     @Body[Nissee]
     {
+        %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
 			%Mods
@@ -152,6 +162,7 @@
     }
     @Body[Plock]
     {
+        %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
 			%Mods
@@ -167,6 +178,7 @@
     }
     @Body[Karen]
     {
+        %cacheFile = ParallaxContinued/Models/ScaledMesh.bin
 		%PQS
 		{
 			%Mods
