--- a/GameData/OuterParallax/OPM/_Configs/ParallaxScaled.cfg
+++ b/GameData/OuterParallax/OPM/_Configs/ParallaxScaled.cfg
@@ -3,15 +3,8 @@
     // Atmospheric bodies
     @Body[Tekto] //
     {
-        // Here is where the usual terrain config goes
-        // This patches in the scaled properties
         ParallaxScaledProperties
         {
-            // Possible modes:
-            // FromTerrain
-            // Baked
-            // Custom
-
             // Altitude in meters
             minTerrainAltitude = -631
             maxTerrainAltitude = 5954
@@ -23,10 +16,10 @@
             mode = FromTerrain
             Material
             {
-                _ColorMap = OuterParallax/Textures/PluginData/Scaled/Tekto/Tekto_color.dds
-                _BumpMap = OuterParallax/Textures/PluginData/Scaled/Tekto/Tekto_normal.dds
-                _HeightMap = OuterParallax/Textures/PluginData/Scaled/Tekto/Tekto_height.dds
-                _AtmosphereRimMap = OuterParallax/Textures/PluginData/Scaled/Tekto/Tekto_Atmo.dds
+                _ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tekto/Tekto_color.dds
+                _BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tekto/Tekto_normal.dds
+                _HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tekto/Tekto_height.dds
+                _AtmosphereRimMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tekto/Tekto_Atmo.dds
                 _PlanetBumpScale = 1
 
                 // Keyword params
@@ -53,15 +46,8 @@
     }
     @Body[Thatmo] //
     {
-        // Here is where the usual terrain config goes
-        // This patches in the scaled properties
         ParallaxScaledProperties
         {
-            // Possible modes:
-            // FromTerrain
-            // Baked
-            // Custom
-
             // Altitude in meters
             minTerrainAltitude = -341
             maxTerrainAltitude = 4981
@@ -73,10 +59,10 @@
             mode = FromTerrain
             Material
             {
-                _ColorMap = OuterParallax/Textures/PluginData/Scaled/Thatmo/Thatmo_color.dds
-                _BumpMap = OuterParallax/Textures/PluginData/Scaled/Thatmo/Thatmo_normal.dds
-                _HeightMap = OuterParallax/Textures/PluginData/Scaled/Thatmo/Thatmo_height.dds
-                _AtmosphereRimMap = OuterParallax/Textures/PluginData/Scaled/Thatmo/Thatmo_Atmo.dds
+                _ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Thatmo/Thatmo_color.dds
+                _BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Thatmo/Thatmo_normal.dds
+                _HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Thatmo/Thatmo_height.dds
+                _AtmosphereRimMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Thatmo/Thatmo_Atmo.dds
                 _PlanetBumpScale = 1
 
                 // Keyword params
@@ -102,28 +88,19 @@
     }
 
     // Vacuum Bodies
-
-    @Body[Hale]
+    @Body[Hale] //
     {
-        // Here is where the usual terrain config goes
-        // This patches in the scaled properties
-
         ParallaxScaledProperties
         {
-            // Possible modes:
-            // FromTerrain
-            // Baked
-            // Custom
-
             // Altitude in meters
             minTerrainAltitude = 1577
             maxTerrainAltitude = 5918
             mode = FromTerrain
             Material
             {
-                _ColorMap = OuterParallax/Textures/PluginData/Scaled/Hale/Hale_color.dds
-                _BumpMap = OuterParallax/Textures/PluginData/Scaled/Hale/Hale_normal.dds
-                _HeightMap = OuterParallax/Textures/PluginData/Scaled/Hale/Hale_height.dds
+                _ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Hale/Hale_color.dds
+                _BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Hale/Hale_normal.dds
+                _HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Hale/Hale_height.dds
                 _PlanetBumpScale = 1
                 Keywords
                 {
@@ -132,8 +109,8 @@
             }
             TerrainMaterialOverride
             {
-                _SpecularPower = 10
-                _SpecularIntensity = 0.7
+                _SpecularPower = 20
+                _SpecularIntensity = 0.005
                 _EmissionColor = 0,0,0,1
                 _BumpScale = 0.3
                 _Tiling = 0.002
@@ -142,25 +119,17 @@
     }
     @Body[Ovok] //
     {
-        // Here is where the usual terrain config goes
-        // This patches in the scaled properties
-
         ParallaxScaledProperties
         {
-            // Possible modes:
-            // FromTerrain
-            // Baked
-            // Custom
-
             // Altitude in meters
             minTerrainAltitude = 0
             maxTerrainAltitude = 14000
             mode = FromTerrain
             Material
             {
-                _ColorMap = OuterParallax/Textures/PluginData/Scaled/Ovok/Ovok_color.dds
-                _BumpMap = OuterParallax/Textures/PluginData/Scaled/Ovok/Ovok_normal.dds
-                _HeightMap = OuterParallax/Textures/PluginData/Scaled/Ovok/Ovok_height.dds
+                _ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Ovok/Ovok_color.dds
+                _BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Ovok/Ovok_normal.dds
+                _HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Ovok/Ovok_height.dds
                 _PlanetBumpScale = 1
                 Keywords
                 {
@@ -179,25 +148,17 @@
     }
     @Body[Slate] //
     {
-        // Here is where the usual terrain config goes
-        // This patches in the scaled properties
-
         ParallaxScaledProperties
         {
-            // Possible modes:
-            // FromTerrain
-            // Baked
-            // Custom
-
             // Altitude in meters
             minTerrainAltitude = -1088
             maxTerrainAltitude = 16416
             mode = FromTerrain
             Material
             {
-                _ColorMap = OuterParallax/Textures/PluginData/Scaled/Slate/Slate_color.dds
-                _BumpMap = OuterParallax/Textures/PluginData/Scaled/Slate/Slate_normal.dds
-                _HeightMap = OuterParallax/Textures/PluginData/Scaled/Slate/Slate_height.dds
+                _ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Slate/Slate_color.dds
+                _BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Slate/Slate_normal.dds
+                _HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Slate/Slate_height.dds
                 _PlanetBumpScale = 1
                 Keywords
                 {
@@ -216,25 +177,17 @@
     }
     @Body[Nissee] //
     {
-        // Here is where the usual terrain config goes
-        // This patches in the scaled properties
-
         ParallaxScaledProperties
         {
-            // Possible modes:
-            // FromTerrain
-            // Baked
-            // Custom
-
             // Altitude in meters
             minTerrainAltitude = 1933
             maxTerrainAltitude = 9113
             mode = FromTerrain
             Material
             {
-                _ColorMap = OuterParallax/Textures/PluginData/Scaled/Nissee/Nissee_color.dds
-                _BumpMap = OuterParallax/Textures/PluginData/Scaled/Nissee/Nissee_normal.dds
-                _HeightMap = OuterParallax/Textures/PluginData/Scaled/Nissee/Nissee_height.dds
+                _ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Nissee/Nissee_color.dds
+                _BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Nissee/Nissee_normal.dds
+                _HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Nissee/Nissee_height.dds
                 _PlanetBumpScale = 1
                 Keywords
                 {
@@ -253,25 +206,17 @@
     }
     @Body[Polta] //
     {
-        // Here is where the usual terrain config goes
-        // This patches in the scaled properties
-
         ParallaxScaledProperties
         {
-            // Possible modes:
-            // FromTerrain
-            // Baked
-            // Custom
-
             // Altitude in meters
             minTerrainAltitude = -466
             maxTerrainAltitude = 8835
             mode = FromTerrain
             Material
             {
-                _ColorMap = OuterParallax/Textures/PluginData/Scaled/Polta/Polta_color.dds
-                _BumpMap = OuterParallax/Textures/PluginData/Scaled/Polta/Polta_normal.dds
-                _HeightMap = OuterParallax/Textures/PluginData/Scaled/Polta/Polta_height.dds
+                _ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Polta/Polta_color.dds
+                _BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Polta/Polta_normal.dds
+                _HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Polta/Polta_height.dds
                 _PlanetBumpScale = 1
                 Keywords
                 {
@@ -288,27 +233,19 @@
             }
         }
     }
-    @Body[Priax]
+    @Body[Priax] //
     {
-        // Here is where the usual terrain config goes
-        // This patches in the scaled properties
-
         ParallaxScaledProperties
         {
-            // Possible modes:
-            // FromTerrain
-            // Baked
-            // Custom
-
             // Altitude in meters
             minTerrainAltitude = 8240
             maxTerrainAltitude = 30479
             mode = FromTerrain
             Material
             {
-                _ColorMap = OuterParallax/Textures/PluginData/Scaled/Priax/Priax_color.dds
-                _BumpMap = OuterParallax/Textures/PluginData/Scaled/Priax/Priax_normal.dds
-                _HeightMap = OuterParallax/Textures/PluginData/Scaled/Priax/Priax_height.dds
+                _ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Priax/Priax_color.dds
+                _BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Priax/Priax_normal.dds
+                _HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Priax/Priax_height.dds
                 _PlanetBumpScale = 1
                 Keywords
                 {
@@ -317,31 +254,27 @@
             }
             TerrainMaterialOverride
             {
-                _Tiling = 0.00033
+                _SpecularPower = 36
+                _SpecularIntensity = 0.25
+                _EmissionColor = 0,0,0,1
+                _BumpScale = 1.0
+                _Tiling = 0.0006
             }
         }
     }
     @Body[Tal] //
     {
-        // Here is where the usual terrain config goes
-        // This patches in the scaled properties
-
         ParallaxScaledProperties
         {
-            // Possible modes:
-            // FromTerrain
-            // Baked
-            // Custom
-
             // Altitude in meters
             minTerrainAltitude = -62
             maxTerrainAltitude = 11904
             mode = FromTerrain
             Material
             {
-                _ColorMap = OuterParallax/Textures/PluginData/Scaled/Tal/Tal_color.dds
-                _BumpMap = OuterParallax/Textures/PluginData/Scaled/Tal/Tal_normal.dds
-                _HeightMap = OuterParallax/Textures/PluginData/Scaled/Tal/Tal_height.dds
+                _ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tal/Tal_color.dds
+                _BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tal/Tal_normal.dds
+                _HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Tal/Tal_height.dds
                 _PlanetBumpScale = 1
                 Keywords
                 {
@@ -350,35 +283,27 @@
             }
             TerrainMaterialOverride
             {
-                _SpecularPower = 30
-                _SpecularIntensity = 0.4
+                _SpecularPower = 45
+                _SpecularIntensity = 0.3
                 _EmissionColor = 0,0,0,1
                 _BumpScale = 1.3
-                _Tiling = 0.0004
+                _Tiling = 0.001
             }
         }
     }
     @Body[Wal] //
     {
-        // Here is where the usual terrain config goes
-        // This patches in the scaled properties
-
         ParallaxScaledProperties
         {
-            // Possible modes:
-            // FromTerrain
-            // Baked
-            // Custom
-
             // Altitude in meters
             minTerrainAltitude = -582
             maxTerrainAltitude = 20760
             mode = FromTerrain
             Material
             {
-                _ColorMap = OuterParallax/Textures/PluginData/Scaled/Wal/Wal_color.dds
-                _BumpMap = OuterParallax/Textures/PluginData/Scaled/Wal/Wal_normal.dds
-                _HeightMap = OuterParallax/Textures/PluginData/Scaled/Wal/Wal_height.dds
+                _ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Wal/Wal_color.dds
+                _BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Wal/Wal_normal.dds
+                _HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Wal/Wal_height.dds
                 _PlanetBumpScale = 1
                 Keywords
                 {
@@ -387,31 +312,27 @@
             }
             TerrainMaterialOverride
             {
-                _Tiling = 0.00033
+                _SpecularPower = 40
+                _SpecularIntensity = 0.15
+                _EmissionColor = 0,0,0,1
+                _BumpScale = 0.6
+                _Tiling = 0.003
             }
         }
     }
     @Body[Plock]//
     {
-        // Here is where the usual terrain config goes
-        // This patches in the scaled properties
-
         ParallaxScaledProperties
         {
-            // Possible modes:
-            // FromTerrain
-            // Baked
-            // Custom
-
             // Altitude in meters
             minTerrainAltitude = -461
             maxTerrainAltitude = 4655
             mode = FromTerrain
             Material
             {
-                _ColorMap = OuterParallax/Textures/PluginData/Scaled/Plock/Plock_color.dds
-                _BumpMap = OuterParallax/Textures/PluginData/Scaled/Plock/Plock_normal.dds
-                _HeightMap = OuterParallax/Textures/PluginData/Scaled/Plock/Plock_height.dds
+                _ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Plock/Plock_color.dds
+                _BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Plock/Plock_normal.dds
+                _HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Plock/Plock_height.dds
                 _PlanetBumpScale = 1
                 Keywords
                 {
@@ -430,25 +351,17 @@
     }
     @Body[Karen]//
     {
-        // Here is where the usual terrain config goes
-        // This patches in the scaled properties
-
         ParallaxScaledProperties
         {
-            // Possible modes:
-            // FromTerrain
-            // Baked
-            // Custom
-
             // Altitude in meters
             minTerrainAltitude = -420
             maxTerrainAltitude = 4655
             mode = FromTerrain
             Material
             {
-                _ColorMap = OuterParallax/Textures/PluginData/Scaled/Karen/Karen_color.dds
-                _BumpMap = OuterParallax/Textures/PluginData/Scaled/Karen/Karen_normal.dds
-                _HeightMap = OuterParallax/Textures/PluginData/Scaled/Karen/Karen_height.dds
+                _ColorMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Karen/Karen_color.dds
+                _BumpMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Karen/Karen_normal.dds
+                _HeightMap = OuterParallax/OPM/_Textures/PluginData/Scaled/Karen/Karen_height.dds
                 _PlanetBumpScale = 1
                 Keywords
                 {
@@ -457,8 +370,8 @@
             }
             TerrainMaterialOverride
             {
-                _SpecularPower = 8
-                _SpecularIntensity = 0.2
+                _SpecularPower = 22
+                _SpecularIntensity = 0.1
                 _EmissionColor = 0,0,0,1
                 _BumpScale = 1.5
                 _Tiling = 0.0003
